add pretty `git graph` wrapper, c/o Seb

--- a/.git-rc
+++ b/.git-rc
@@ -31,6 +31,7 @@ alias gls="git ls-files"
 alias gac="g ac '%h'"
 alias gng="git --no-pager grep"
 alias gg="git grep"
+alias gp="g gp"
 
 alias gc="git commit"
 alias gcm="git commit -m"
