improve `git graph`
h/t Seb

--- a/.git-rc
+++ b/.git-rc
@@ -24,7 +24,6 @@ alias gbD="git branch -D"
 alias gbdf="git branch -D"
 alias gd="git diff"
 alias gdc="gd --cached"
-alias gln="git lg"
 alias gs="git status"
 alias gb="g b"
 alias gbu="g bu"
@@ -35,7 +34,9 @@ alias gl="git lg"
 alias gls="git ls-files"
 alias gac="g ac '%h'"
 alias gng="git --no-pager grep"
-alias gg="git grep"
+alias gg="git graph"
+alias ggn="git graph -n"
+alias gln="git graph -n"
 alias gp="g gp"
 
 alias gc="git commit"
