switch `gln` back to `g lg`

--- a/.git-rc
+++ b/.git-rc
@@ -36,7 +36,8 @@ alias gac="g ac '%h'"
 alias gng="git --no-pager grep"
 alias gg="git graph"
 alias ggn="git graph -n"
-alias gln="git graph -n"
+#alias gln="gn graph -n"
+alias gln="g lg"
 alias gp="g gp"
 
 alias gc="git commit"
