--- a/.git-rc
+++ b/.git-rc
@@ -35,6 +35,7 @@ alias gls="git ls-files"
 alias gac="g ac '%h'"
 alias gng="git --no-pager grep"
 alias gg="git graph"
+alias ggc="git graph-commits"
 alias ggn="git graph -n"
 #alias gln="gn graph -n"
 alias gln="g lg"
