--- a/.git-rc
+++ b/.git-rc
@@ -36,6 +36,7 @@ alias gac="g ac '%h'"
 alias gng="git --no-pager grep"
 alias gg="git graph"
 alias ggc="git graph-commits"
+alias ggp="git graph-pretty"
 alias ggn="git graph -n"
 #alias gln="gn graph -n"
 alias gln="g lg"
