add `git diff HEAD` alias

--- a/.git-rc
+++ b/.git-rc
@@ -30,6 +30,7 @@ alias gbD="git branch -D"
 alias gbdf="git branch -D"
 alias gd="git diff"
 alias gdc="gd --cached"
+alias gdh="git diff HEAD"
 alias gs="git status"
 alias gb="g b"
 alias gbu="g bu"
