--- a/.git-rc
+++ b/.git-rc
@@ -26,6 +26,7 @@ append_subdir_to_path() {
 append_to_path "$dir" "$dir/aliases"
 
 append_subdir_to_path bisect
+append_subdir_to_path commit
 
 
 # Don't try to remove NFS bookkeeping files when running git-copy-diffs
