--- a/.git-rc
+++ b/.git-rc
@@ -29,6 +29,7 @@ append_subdir_to_path bisect
 append_subdir_to_path cherry-pick
 append_subdir_to_path commit
 append_subdir_to_path conflicts
+append_subdir_to_path merge-base
 append_subdir_to_path rebase
 
 
