--- a/.git-rc
+++ b/.git-rc
@@ -31,6 +31,7 @@ append_subdir_to_path commit
 append_subdir_to_path conflicts
 append_subdir_to_path merge-base
 append_subdir_to_path rebase
+append_subdir_to_path remote
 
 
 # Don't try to remove NFS bookkeeping files when running git-copy-diffs
