--- a/.git-rc
+++ b/.git-rc
@@ -32,6 +32,7 @@ append_subdir_to_path conflicts
 append_subdir_to_path merge-base
 append_subdir_to_path rebase
 append_subdir_to_path remote
+append_subdir_to_path rev-list
 
 
 # Don't try to remove NFS bookkeeping files when running git-copy-diffs
