--- a/.git-rc
+++ b/.git-rc
@@ -23,12 +23,13 @@ append_subdir_to_path() {
   append_to_path "$dir/$1" "$dir/$1/aliases"
 }
 
-append_to_path "$dir" "$dir/aliases"
+append_to_path "$dir" "$dir/aliases" "$dir"/github
 
 append_subdir_to_path bisect
 append_subdir_to_path cherry-pick
 append_subdir_to_path commit
 append_subdir_to_path conflicts
+append_subdir_to_path github
 append_subdir_to_path merge-base
 append_subdir_to_path rebase
 append_subdir_to_path remote
