--- a/.git-rc
+++ b/.git-rc
@@ -32,6 +32,7 @@ append_subdir_to_path commit
 append_subdir_to_path conflicts
 append_subdir_to_path github
 append_subdir_to_path graph
+append_subdir_to_path help
 append_subdir_to_path log
 append_subdir_to_path merge-base
 append_subdir_to_path rebase
