--- a/.git-rc
+++ b/.git-rc
@@ -38,6 +38,7 @@ append_subdir_to_path merge-base
 append_subdir_to_path rebase
 append_subdir_to_path remote
 append_subdir_to_path rev-list
+append_subdir_to_path rm
 
 
 # Don't try to remove NFS bookkeeping files when running git-copy-diffs
