--- a/.git-rc
+++ b/.git-rc
@@ -39,7 +39,7 @@ append_subdir_to_path rebase
 append_subdir_to_path remote
 append_subdir_to_path rev-list
 append_subdir_to_path rm
-
+append_subdir_to_path status
 
 # Don't try to remove NFS bookkeeping files when running git-copy-diffs
 export GIT_COPY_DIFFS_PRESERVE_UNTRACKED='.nfs000*'
