--- a/.git-rc
+++ b/.git-rc
@@ -30,6 +30,7 @@ append_subdir_to_path branch
 append_subdir_to_path cherry-pick
 append_subdir_to_path commit
 append_subdir_to_path conflicts
+append_subdir_to_path diff
 append_subdir_to_path github
 append_subdir_to_path graph
 append_subdir_to_path help
