--- a/.git-rc
+++ b/.git-rc
@@ -26,6 +26,7 @@ append_subdir_to_path() {
 append_to_path "$dir" "$dir/aliases" "$dir"/github
 
 append_subdir_to_path bisect
+append_subdir_to_path blame
 append_subdir_to_path branch
 append_subdir_to_path cherry-pick
 append_subdir_to_path commit
