--- a/.git-rc
+++ b/.git-rc
@@ -25,6 +25,7 @@ append_subdir_to_path() {
 
 append_to_path "$dir" "$dir/aliases" "$dir"/github
 
+append_subdir_to_path apply
 append_subdir_to_path bisect
 append_subdir_to_path blame
 append_subdir_to_path branch
