--- a/.git-rc
+++ b/.git-rc
@@ -30,6 +30,7 @@ append_subdir_to_path bisect
 append_subdir_to_path blame
 append_subdir_to_path branch
 append_subdir_to_path cherry-pick
+append_subdir_to_path clone
 append_subdir_to_path commit
 append_subdir_to_path conflicts
 append_subdir_to_path diff
