--- a/.git-rc
+++ b/.git-rc
@@ -42,6 +42,7 @@ append_subdir_to_path ls
 append_subdir_to_path merge
 append_subdir_to_path merge-base
 append_subdir_to_path mv
+append_subdir_to_path nav
 append_subdir_to_path push
 append_subdir_to_path rebase
 append_subdir_to_path remote
