--- a/.git-rc
+++ b/.git-rc
@@ -14,6 +14,10 @@ fi
 # Function to get the absolute path of a file:
 abspath () { case "$1" in /*)printf "%s\n" "$1";; *)printf "%s\n" "$PWD/$1";; esac; }
 
+count() {
+  echo $#
+}
+
 append_to_path() {
   for arg in "$@"; do
     if [ -d "$arg" ]; then
