--- a/.git-rc
+++ b/.git-rc
@@ -37,6 +37,7 @@ append_subdir_to_path help
 append_subdir_to_path log
 append_subdir_to_path merge-base
 append_subdir_to_path mv
+append_subdir_to_path push
 append_subdir_to_path rebase
 append_subdir_to_path remote
 append_subdir_to_path rev-list
