--- a/.git-rc
+++ b/.git-rc
@@ -66,4 +66,4 @@ export pr="origin/pr"
 alias snippets='git log --since "8days" --oneline --author $USER'
 
 # Source this repository's `.gitconfig` file from your global `.gitconfig`.
-git config --global include.path "$dir"/.gitconfig
+git config --global include.path "$dir"/config/.gitconfig
