--- a/.git-rc
+++ b/.git-rc
@@ -8,6 +8,8 @@ else
   dir="$(dirname "${BASH_SOURCE[0]}")"
 fi
 
+dir="$(cd "$dir" && echo "$PWD")"
+
 [ -s "$dir/.gitcomplete" ] && source "$dir/.gitcomplete"
 [ -s "$dir/.git-completion.bash" ] && source "$dir/.git-completion.bash"
 
