export GIT_HELPERS_HOME, use it for `source`ing
fixes #27

--- a/.git-rc
+++ b/.git-rc
@@ -9,6 +9,7 @@ else
 fi
 
 dir="$(cd "$dir" && echo "$PWD")"
+export GIT_HELPERS_HOME="$dir"
 
 [ -s "$dir/.gitcomplete" ] && source "$dir/.gitcomplete"
 [ -s "$dir/.git-completion.bash" ] && source "$dir/.git-completion.bash"
