trap EXIT, clean up test files in test scripts
fixes #32

--- a/test/.helpers-rc
+++ b/test/.helpers-rc
@@ -21,3 +21,10 @@ check_link() {
 
   [ "$expected" == "$actual" ] || err "Expected link $link to point to $expected; actually $actual"
 }
+
+finish() {
+  cd "$(git root)"
+  test/clean-test-files
+}
+
+trap finish EXIT
