--- a/.git-rc
+++ b/.git-rc
@@ -59,6 +59,7 @@ append_subdir_to_path rm
 append_subdir_to_path show
 append_subdir_to_path stash
 append_subdir_to_path status
+append_subdir_to_path tag
 append_subdir_to_path version
 
 export oh="origin/HEAD"
