add log helper with datetime to .helpers-rc

--- a/config/.helpers-rc
+++ b/config/.helpers-rc
@@ -12,6 +12,9 @@ err() {
   exit 1
 }
 
+log() {
+  echo "$(date +%Y-%m-%d-%H:%M:%S): $@"
+}
 
 # Prompt a user for a y/n response until they give you a satisfactory answer.
 # Usage: `prompt <prompt> <default=y>`
