change to original git repo when cleaning up tests
copy-diffs-test creates clones of itself in subdirs, so `git root` only
takes you to their roots, which is not where you want to run the
clean-test-files script.

--- a/test/.helpers-rc
+++ b/test/.helpers-rc
@@ -22,8 +22,10 @@ check_link() {
   [ "$expected" == "$actual" ] || err "Expected link $link to point to $expected; actually $actual"
 }
 
+export GIT_HELPERS_TEST_HOME="$(git root)"
+
 finish() {
-  cd "$(git root)"
+  cd "$GIT_HELPERS_TEST_HOME"
   if [ -z "$GIT_HELPERS_DEV_MODE" ]; then
     test/clean-test-files
   fi
