--- a/config/.gitconfig
+++ b/config/.gitconfig
@@ -28,7 +28,7 @@
         history = log --full-diff -p
         L       = log --graph --pretty=format:'%Cred%h%Creset -%C(yellow)%d%Creset %s %Cgreen(%cr) %C(bold blue)<%an>%Creset%n%n%B' --date=relative
         ls      = ls-files
-        lso     = ls-files --other --exclude-standard
+        lso     = ls-files --other --exclude-standard --directory
         lsc     = diff-tree --no-commit-id --name-only -r
         m       = merge
         ma      = merge --abort
