move remote alias symlinks into .gitconfig aliases

--- a/remote/.gitconfig
+++ b/remote/.gitconfig
@@ -1,3 +1,7 @@
 [alias]
         r       = remote
         rv      = remote -v
+	cd	= copy-diffs
+	lgp	= load-github-prs
+	mr	= mirror-remote
+	up	= unpack-and-apply-diffs
