move `branch` aliases into .gitconfig

--- a/branch/.gitconfig
+++ b/branch/.gitconfig
@@ -1,2 +1,11 @@
 [alias]
         bm      = branch -m
+	b = branches
+	bmv = branch-move
+	br = remote-branches
+	bu = branch-upstream
+	cb = current-branch
+	dmb = delete-merged-branches
+	lb = local-branches
+	nb = new-branch
+	ub = update-branch
