commit, log, cherry-pick aliases into .gitconfig

--- a/cherry-pick/.gitconfig
+++ b/cherry-pick/.gitconfig
@@ -2,3 +2,4 @@
         cp      = cherry-pick
         cpc     = cherry-pick --continue
         cpa     = cherry-pick --abort
+	acpc = add-and-cherry-pick-continue
