--- a/ls/.gitconfig
+++ b/ls/.gitconfig
@@ -2,3 +2,4 @@
         l       = ls-files
         ls      = ls-files
         lso     = ls-files --other --exclude-standard --directory
+	lsh = ls-hashes
