--- a/rebase/.gitconfig
+++ b/rebase/.gitconfig
@@ -6,3 +6,5 @@
         rem     = rebase master
         ri      = rebase -i
         rs      = rebase --skip
+	arc = add-rebase-continue.sh
+	aurc = add-u-rebase-continue
