move include config/.gitconfig to a new file
Having .git-helpers.config include git-helpers’ main .gitconfig file
(config/.gitconfig), instead of making a user include config/.gitconfig
from their main $HOME/.gitconfig file, allows for $HOME/.gitconfig to
exist in e.g. a dotfiles git repo and not have the (possibly system-
dependent) path to git-helpers hard-coded in it.

--- a/.git-rc
+++ b/.git-rc
@@ -71,4 +71,6 @@ export pr="origin/pr"
 alias snippets='git log --since "8days" --oneline --author $USER'
 
 # Source this repository's `.gitconfig` file from your global `.gitconfig`.
-git config --global include.path "$dir"/config/.gitconfig
+config_file="$HOME"/.git-helpers.config
+git config -f "$config_file" include.path "$dir"/config/.gitconfig
+git config --global include.path "$config_file"
