--- a/.git-rc
+++ b/.git-rc
@@ -71,6 +71,15 @@ export pr="origin/pr"
 
 alias snippets='git log --since "8days" --oneline --author $USER'
 
+### Aliases for `gist` utility: https://github.com/defunkt/gist ###
+# Private gist, copy link to clipboard, parse first argument as gist description
+alias gst="gist -p -c -d"
+# Same as above, but open in browser ("-o")
+alias gsto="gist -p -c -o -d"
+# Same as above, but pulling content from clipboard
+alias gstp="gist -p -c -o -P -d"
+
+
 # Source this repository's `.gitconfig` file from your global `.gitconfig`.
 config_file="$HOME"/.git-helpers.config
 git config -f "$config_file" include.path "$dir"/config/.gitconfig
