`git commit --amend` helper

--- a/commit/.git-rc
+++ b/commit/.git-rc
@@ -3,6 +3,7 @@
 alias gc="g c"
 alias gca="g ca"
 alias gcm="g cm"
+alias gcn="g cn"
 alias gcam="g cam"
 alias gcane="g cane"
 alias gcaane="g caane"
