--- a/.git-rc
+++ b/.git-rc
@@ -85,4 +85,6 @@ alias gstp="gist -p -c -o -P -d"
 
 # Source this repository's `.gitconfig` file from your global `.gitconfig`.
 config_file="$dir"/config/.gitconfig
-git config --global --add include.path "$config_file"
+if ! git config --global --get-all include.path | grep "$config_file" >/dev/null; then
+  git config --global --add include.path "$config_file"
+fi
