--- a/.git-rc
+++ b/.git-rc
@@ -40,6 +40,7 @@ append_subdir_to_path apply
 append_subdir_to_path bisect
 append_subdir_to_path blame
 append_subdir_to_path branch
+append_subdir_to_path checkout
 append_subdir_to_path cherry-pick
 append_subdir_to_path clone
 append_subdir_to_path commit
