--- a/.git-rc
+++ b/.git-rc
@@ -61,6 +61,7 @@ append_subdir_to_path nav
 append_subdir_to_path push
 append_subdir_to_path rebase
 append_subdir_to_path remote
+append_subdir_to_path reset
 append_subdir_to_path rev-list
 append_subdir_to_path rm
 append_subdir_to_path show
