--- a/config/.gitconfig
+++ b/config/.gitconfig
@@ -28,6 +28,7 @@
         path = "../ls/.gitconfig"
         path = "../merge/.gitconfig"
         path = "../rebase/.gitconfig"
+        path = "../reset/.gitconfig"
         path = "../rev-list/.gitconfig"
         path = "../stash/.gitconfig"
 	path = ../remote/.gitconfig
