Only source git-completion in bash

--- a/.git-rc
+++ b/.git-rc
@@ -12,7 +12,10 @@ dir="$(cd "$dir" && echo "$PWD")"
 export GIT_HELPERS_HOME="$dir"
 
 [ -s "$dir/.gitcomplete" ] && source "$dir/.gitcomplete"
-[ -s "$dir/.git-completion.bash" ] && source "$dir/.git-completion.bash"
+
+if [ -n "$BASH_VERSION" ]; then
+  [ -s "$dir/.git-completion.bash" ] && source "$dir/.git-completion.bash"
+fi
 
 append_to_path() {
   for arg in "$@"; do
