--- a/.git-rc
+++ b/.git-rc
@@ -41,6 +41,7 @@ append_subdir_to_path bisect
 append_subdir_to_path blame
 append_subdir_to_path branch
 append_subdir_to_path checkout
+append_subdir_to_path check-ignore
 append_subdir_to_path cherry-pick
 append_subdir_to_path clone
 append_subdir_to_path commit
