--- a/grep/.gitconfig
+++ b/grep/.gitconfig
@@ -1,4 +1,6 @@
 [alias]
   ng = !git --no-pager grep
+  g = !git --no-pager grep
+  gi = !git --no-pager grep -i
   gl = !git --no-pager grep -l
   kl = kill-lines
