--- a/remote/.gitconfig
+++ b/remote/.gitconfig
@@ -1,12 +1,13 @@
 [alias]
-        r       = remote
-        ra			= remote add
-        rv      = remote -v
-	cd	= copy-diffs
-	lgp	= load-github-prs
-	lpr = load-github-prs
-	mr	= mirror-remote
-	up	= unpack-and-apply-diffs
-  amr = add-mirror-remote
-	rr = remote rename
-	rmv = remote rename
+  r       = remote
+  ra      = remote add
+  rv      = remote -v
+  re      = remote-exists
+  cd      = copy-diffs
+  lgp     = load-github-prs
+  lpr     = load-github-prs
+  mr      = mirror-remote
+  up      = unpack-and-apply-diffs
+  amr     = add-mirror-remote
+  rr      = remote rename
+  rmv     = remote rename
