--- a/.travis.yml
+++ b/.travis.yml
@@ -3,12 +3,15 @@ python:
   - 2.7
   - 3.4
 
-install: pip install -r requirements.dev.txt
+install:
+  - pip install -r requirements.dev.txt
 
 before_script:
   - source .git-rc
   - git config --global user.email "you@example.com"
   - git config --global user.name "Your Name"
+  - export PYTHONPATH="$PYTHONPATH:`pwd`/util"
+  - echo "$PYTHONPATH"
 
 script:
   - ./run-tests
