--- a/.git-rc
+++ b/.git-rc
@@ -45,6 +45,7 @@ append_subdir_to_path check-ignore
 append_subdir_to_path cherry-pick
 append_subdir_to_path clone
 append_subdir_to_path commit
+append_subdir_to_path config
 append_subdir_to_path conflicts
 append_subdir_to_path describe
 append_subdir_to_path diff
