--- a/config/.gitconfig
+++ b/config/.gitconfig
@@ -10,6 +10,10 @@
 [color "diff"]
        meta = yellow bold
 
+[alias]
+        cf = config
+        cg = config
+
 [include]
         path = "../add/.gitconfig"
         path = "../admin/.gitconfig"
