ls, status helpers

--- a/status/.git-rc
+++ b/status/.git-rc
@@ -4,3 +4,8 @@ alias gs="git status"
 alias ghc="g hc"
 alias ghnc="g hnc"
 alias gic="g ic"
+alias gla="g la"
+alias glc="g lc"
+alias glc1="g lc | head -n 1"
+alias glcc="g lcc"
+alias gld="g ld"
