Add gdnom alias

--- a/diff/.git-rc
+++ b/diff/.git-rc
@@ -9,3 +9,4 @@ alias gdt="g dt"
 alias gnd="gn diff"
 alias gndc="gn diff --cached"
 alias gndh="gn diff HEAD"
+alias gdnom="git diff --name-only master"
