`git add` helpers

--- a/add/.git-rc
+++ b/add/.git-rc
@@ -4,4 +4,9 @@ alias ga.="g a ."
 alias gap="g ap"
 alias gap.="g ap ."
 alias gdma="g dma"
-
+alias gau="g au"
+alias gau.="g au ."
+alias gaup="g aup"
+alias gapu="g apu"
+alias gaup.="g aup ."
+alias gapu.="g apu ."
