--- a/config/.gitconfig
+++ b/config/.gitconfig
@@ -11,7 +11,7 @@
        meta = yellow bold
 
 [alias]
-        cf = config
+        cfg = config
         cg = config
 
 [include]
@@ -19,6 +19,7 @@
         path = "../admin/.gitconfig"
         path = "../blame/.gitconfig"
         path = "../branch/.gitconfig"
+        path = "../cat-file/.gitconfig"
         path = "../check-ignore/.gitconfig"
         path = "../checkout/.gitconfig"
         path = "../cherry-pick/.gitconfig"
