--- a/branch/.git-rc
+++ b/branch/.git-rc
@@ -1,8 +1,10 @@
 #!/usr/bin/env bash
 
-alias gbd="git branch -d"
-alias gbD="git branch -D"
-alias gbdf="git branch -D"
+alias gbd="g bd"
+alias gbD="g bD"
+alias gbdf="g bdf"
+alias gbf="g bf"
+alias gbmv="g bmv"
 
 alias gb="g b"
 alias gbu="g bu"
@@ -11,3 +13,5 @@ alias gbr="g br"
 alias gcb="g cb"
 alias gdmb="g dmb"
 alias gdmbr="g dmbr"
+
+alias gnb="g nb"
