--- a/stash/.gitconfig
+++ b/stash/.gitconfig
@@ -1,7 +1,9 @@
 [alias]
-        s       = stash
-        sl      = stash list
-        ss      = stash save
-        sa      = stash apply
-        sp      = stash pop
-	sv = stash-view
+  s       = stash
+  sl      = stash list
+  ss      = stash save
+  ssk     = stash save -k
+  sk      = stash save -k
+  sa      = stash apply
+  sp      = stash pop
+  sv = stash-view
