--- a/rebase/.git-rc
+++ b/rebase/.git-rc
@@ -12,3 +12,8 @@ alias gri="g ri"
 alias grim="g rim"
 
 alias garc='g arc'
+
+alias goc="g oc"
+alias goh="g oh"
+alias gshoc="g shoc"
+alias gshoh="g shoh"
