--- a/rebase/.gitconfig
+++ b/rebase/.gitconfig
@@ -9,3 +9,7 @@
   ri      = rebase -i
   rim     = rebase -i master
   arc     = add-rebase-continue
+  oc      = original-commit
+  oh      = orig-head
+  shoc    = !git show `git original-commit`
+  shoh    = !git show `git orig-head`
