--- a/.git-rc
+++ b/.git-rc
@@ -64,6 +64,7 @@ append_subdir_to_path github
 append_subdir_to_path graph
 append_subdir_to_path grep
 append_subdir_to_path help
+append_subdir_to_path lfs
 append_subdir_to_path log
 append_subdir_to_path ls
 append_subdir_to_path merge
