--- a/bisect/.gitconfig
+++ b/bisect/.gitconfig
@@ -1,6 +1,10 @@
 [alias]
-	bs = bisect
-	bcag = bisect-commits-ahead-good
-	bcbb = bisect-commits-behind-bad
-	beb = bisect-earliest-bad
-	blg = bisect-latest-good
+  bs = bisect
+  bsg = bisect good
+  bsb = bisect bad
+  bss = bisect start
+  bsr = bisect reset
+  bcag = bisect-commits-ahead-good
+  bcbb = bisect-commits-behind-bad
+  beb = bisect-earliest-bad
+  blg = bisect-latest-good
