--- a/conflicts/.gitconfig
+++ b/conflicts/.gitconfig
@@ -1,8 +1,10 @@
 [alias]
   ct = !$SRCDIR/git-conflicting-checkout-theirs.sh
   cl = conflict-lines
-  coo = conflicting-checkout-ours
-  cooc = conflicting-checkout-ours-and-continue
-  cot = conflicting-checkout-theirs
-  cotc = conflicting-checkout-theirs-and-continue
+  coo = checkout --ours --
+  cot = checkout --theirs --
+  coco = conflicting-checkout-ours
+  cococ = conflicting-checkout-ours-and-continue
+  coct = conflicting-checkout-theirs
+  coctc = conflicting-checkout-theirs-and-continue
   uu = conflicting
