--- a/stash/.git-rc
+++ b/stash/.git-rc
@@ -3,7 +3,7 @@
 alias gss="git stash save"
 alias gsa="git stash apply"
 alias gsp="git stash pop"
-alias gsl="gn sl"
+alias gsl="g sl"
 alias gss="g ss"
 alias gssk="g ssk"
 alias gsk="g sk"
