--- a/diff/.git-rc
+++ b/diff/.git-rc
@@ -3,6 +3,7 @@
 alias gd="git d"
 alias gdc="g dc"
 alias gdh="git diff HEAD"
+alias gdn="g dn"
 alias gdp="g dp"
 alias gds="g ds"
 alias gdt="g dt"
