--- a/reset/.git-rc
+++ b/reset/.git-rc
@@ -1,7 +1,8 @@
 #!/usr/bin/env bash
 
-alias grsh="g rsh"
+alias grsp="g rsp"
 alias gr.="g reset ."
+alias grs.="g reset ."
 alias grp="g rp"
 alias grh="g rh"
 alias grs="g rs"
