--- a/show/.git-rc
+++ b/show/.git-rc
@@ -1,5 +1,7 @@
 #!/usr/bin/env bash
 
 alias gsh="g sh"
+alias gnsh="gn sh"
+alias gsn="g sn"
 alias gshs="gn shs"  # git-show-short, no pager
 alias gshh="g sh HEAD"
